FOP-2643: Java 9 warnings
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/commons/trunk@1780540 13f79535-47bb-0310-9956-ffa450edef68